# gimpsep-photowish

./: .gitignore  CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  Header.h  Menu.h  README.md  Resizing.cpp  Stitching.cpp  cannyEdges.cpp  changeBrightness.cpp  changeContrast.cpp  consoleGimp.cpp  contrast.cpp  cvui.h  dilation.cpp  dilation_erosion.cpp  dimensionsResizing.cpp  erosion.cpp  faceDetection.cpp  factorResizing.cpp  gimpLikeApplication.cpp  menu.cpp  resize.cpp  resources.qrc  saveImage.cpp  uiGimp.cpp
include/: CropSelectionTool.h  DisplayLabel.h  DrawingTool.h  Image.h  brightnesstool.h  contrasttool.h  newfiledialog.h  resizetool.h  root.h
src/: CropSelectionTool.cpp  DisplayLabel.cpp  DrawingTool.cpp  Image.cpp  brightnesstool.cpp  contrasttool.cpp  main.cpp  newfiledialog.cpp  resizetool.cpp  root.cpp
ui/: brightnesstool.ui  contrasttool.ui  newfiledialog.ui  resizetool.ui  root.ui
